@@ -1,3 +1,11 @@
+2005-08-16  Shakti Sen <shprasad@novell.com>
+
+	* addressbook/e-book-backend-exchange.c:
+	Added new functions proppatch_im(), populate_im().
+	In brief, contact editor (exchange) supports IM field.
+
+	Fixes bug #257802.
+
 2005-08-08  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* configure.in : Bumped the version to 2.3.7
